--- a/environment.yml
+++ b/environment.yml
@@ -10,9 +10,9 @@ dependencies:
   - scikit-learn
   - jupyterlab
   - ipywidgets
-  - pytorch
-  - torchvision
   - pip
   - pip:
+      - tensorflow-cpu==2.15.0
+      - keras==2.15.0
       - opencv-python
       - ultralytics
